--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
             <h2>Shopping Cart</h2>
             <ul id="cart-items"></ul>
             <p>Total:  ₹ <span id="total-price">0.00</span></p>
-            <button onclick="placeOrder()">Place Order</button>
+         <a href="order-confirmation.html">
+  <button>Place Order</button>
+</a>
+
         </div>
         
     </main>
