--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h2>Shopping Cart</h2>
             <ul id="cart-items"></ul>
             <p>Total:  ₹ <span id="total-price">0.00</span></p>
-         <a href="order-confirmation.html">
+         <a href="https://qrifypay.netlify.app/">
   <button>Place Order</button>
 </a>
 
