--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                 <button onclick="addToCart('Rasmalai', 70)">Add to Cart</button>
             </div>
         </div>
+        <div>
+        <input type="text" id="extraInstructions" placeholder="Extra instructions (e.g., no sugar)" 
+       style="width: 50%; height: 75px; padding: 8px; margin: 10px 0; border-radius: 6px; border: 5px solid #ccc;">
+
+</div>
 
         <!-- Cart Section -->
         <div class="cart">
